--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "deps/Turtlebot3"]
-	path = deps/Turtlebot3
+[submodule "refs/Turtlebot3"]
+	path = refs/Turtlebot3
 	url = https://github.com/gerald-rocher/Turtlebot3.git
