--- a/src/ia_package/package.xml
+++ b/src/ia_package/package.xml
@@ -10,6 +10,8 @@
   <depend>rclpy</depend>
   <depend>std_msgs</depend>
   <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>sensor_msgs_py</depend>
   <depend>cv_bridge</depend>
   <depend>opencv-python</depend>
   <depend>ultralytics</depend>
